examples/test/testpolicy1155.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1155
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key26: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value8
      podSelector:
        matchLabels:
          key46: value24
          key8: value20
          key3: value30
